[tool.poetry]
name = "finitive-notification-socket"
version = "0.1.0"
description = ""
authors = ["rede akbar <rede@clade.ventures>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask-socketio = "^5.3.2"
flask = "^2.2.2"
requests = "^2.28.1"
faker = "^15.3.4"
simple-websocket = "^0.9.0"
uwsgi = "^2.0.21"
gevent = "^22.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
